fixed pom.xml and dependencies for JDK 25 compatability